// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadProviders loads cleaners successfully 1`] = `
Array [
  S3 {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "buckets": Array [],
    "domain": null,
    "dryRun": false,
    "name": "S3",
    "profile": "test",
    "region": "ap-southeast-2",
    "s3": Object {
      "CALL_EVENTS_BUBBLE": [Function],
      "MONITOR_EVENTS_BUBBLE": [Function],
      "_clientId": 1,
      "_events": Object {
        "apiCall": Array [
          [Function],
        ],
        "apiCallAttempt": Array [
          [Function],
        ],
      },
      "config": Config {
        "apiVersion": null,
        "apiVersions": Object {},
        "clientSideMonitoring": false,
        "computeChecksums": true,
        "convertResponseTypes": true,
        "correctClockSkew": false,
        "credentialProvider": CredentialProviderChain {
          "providers": Array [
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          ],
          "resolveCallbacks": Array [],
        },
        "credentials": null,
        "customUserAgent": null,
        "dynamoDbCrc32": true,
        "endpoint": "s3.ap-southeast-2.amazonaws.com",
        "endpointCacheSize": 1000,
        "endpointDiscoveryEnabled": false,
        "hostPrefixEnabled": true,
        "httpOptions": Object {
          "timeout": 120000,
        },
        "logger": null,
        "maxRedirects": 10,
        "maxRetries": undefined,
        "paramValidation": true,
        "region": "ap-southeast-2",
        "retryDelayOptions": Object {},
        "s3BucketEndpoint": false,
        "s3DisableBodySigning": true,
        "s3ForcePathStyle": false,
        "signatureCache": true,
        "signatureVersion": "s3",
        "sslEnabled": true,
        "systemClockOffset": 0,
        "useAccelerateEndpoint": false,
      },
      "endpoint": Endpoint {
        "host": "s3.ap-southeast-2.amazonaws.com",
        "hostname": "s3.ap-southeast-2.amazonaws.com",
        "href": "https://s3.ap-southeast-2.amazonaws.com/",
        "path": "/",
        "pathname": "/",
        "port": 443,
        "protocol": "https:",
      },
      "isGlobalEndpoint": false,
    },
  },
  CloudFormation {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "cloudFormation": Object {
      "CALL_EVENTS_BUBBLE": [Function],
      "MONITOR_EVENTS_BUBBLE": [Function],
      "_clientId": 2,
      "_events": Object {
        "apiCall": Array [
          [Function],
        ],
        "apiCallAttempt": Array [
          [Function],
        ],
      },
      "config": Config {
        "apiVersion": null,
        "apiVersions": Object {},
        "clientSideMonitoring": false,
        "computeChecksums": true,
        "convertResponseTypes": true,
        "correctClockSkew": false,
        "credentialProvider": CredentialProviderChain {
          "providers": Array [
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          ],
          "resolveCallbacks": Array [],
        },
        "credentials": null,
        "customUserAgent": null,
        "dynamoDbCrc32": true,
        "endpoint": "cloudformation.ap-southeast-2.amazonaws.com",
        "endpointCacheSize": 1000,
        "endpointDiscoveryEnabled": false,
        "hostPrefixEnabled": true,
        "httpOptions": Object {
          "timeout": 120000,
        },
        "logger": null,
        "maxRedirects": 10,
        "maxRetries": undefined,
        "paramValidation": true,
        "region": "ap-southeast-2",
        "retryDelayOptions": Object {},
        "s3BucketEndpoint": false,
        "s3DisableBodySigning": true,
        "s3ForcePathStyle": false,
        "signatureCache": true,
        "signatureVersion": "v4",
        "sslEnabled": true,
        "systemClockOffset": 0,
        "useAccelerateEndpoint": false,
      },
      "endpoint": Endpoint {
        "host": "cloudformation.ap-southeast-2.amazonaws.com",
        "hostname": "cloudformation.ap-southeast-2.amazonaws.com",
        "href": "https://cloudformation.ap-southeast-2.amazonaws.com/",
        "path": "/",
        "pathname": "/",
        "port": 443,
        "protocol": "https:",
      },
      "isGlobalEndpoint": false,
    },
    "domain": null,
    "dryRun": false,
    "name": "CloudFormation",
    "profile": "test",
    "region": "ap-southeast-2",
    "stacks": Array [],
  },
]
`;

exports[`loadProviders loads cleaners successfully for multiple regions 1`] = `
Array [
  S3 {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "buckets": Array [],
    "domain": null,
    "dryRun": false,
    "name": "S3",
    "profile": "test",
    "region": "ap-southeast-2",
    "s3": Object {
      "CALL_EVENTS_BUBBLE": [Function],
      "MONITOR_EVENTS_BUBBLE": [Function],
      "_clientId": 3,
      "_events": Object {
        "apiCall": Array [
          [Function],
        ],
        "apiCallAttempt": Array [
          [Function],
        ],
      },
      "config": Config {
        "apiVersion": null,
        "apiVersions": Object {},
        "clientSideMonitoring": false,
        "computeChecksums": true,
        "convertResponseTypes": true,
        "correctClockSkew": false,
        "credentialProvider": CredentialProviderChain {
          "providers": Array [
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          ],
          "resolveCallbacks": Array [],
        },
        "credentials": null,
        "customUserAgent": null,
        "dynamoDbCrc32": true,
        "endpoint": "s3.ap-southeast-2.amazonaws.com",
        "endpointCacheSize": 1000,
        "endpointDiscoveryEnabled": false,
        "hostPrefixEnabled": true,
        "httpOptions": Object {
          "timeout": 120000,
        },
        "logger": null,
        "maxRedirects": 10,
        "maxRetries": undefined,
        "paramValidation": true,
        "region": "ap-southeast-2",
        "retryDelayOptions": Object {},
        "s3BucketEndpoint": false,
        "s3DisableBodySigning": true,
        "s3ForcePathStyle": false,
        "signatureCache": true,
        "signatureVersion": "s3",
        "sslEnabled": true,
        "systemClockOffset": 0,
        "useAccelerateEndpoint": false,
      },
      "endpoint": Endpoint {
        "host": "s3.ap-southeast-2.amazonaws.com",
        "hostname": "s3.ap-southeast-2.amazonaws.com",
        "href": "https://s3.ap-southeast-2.amazonaws.com/",
        "path": "/",
        "pathname": "/",
        "port": 443,
        "protocol": "https:",
      },
      "isGlobalEndpoint": false,
    },
  },
  CloudFormation {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "cloudFormation": Object {
      "CALL_EVENTS_BUBBLE": [Function],
      "MONITOR_EVENTS_BUBBLE": [Function],
      "_clientId": 4,
      "_events": Object {
        "apiCall": Array [
          [Function],
        ],
        "apiCallAttempt": Array [
          [Function],
        ],
      },
      "config": Config {
        "apiVersion": null,
        "apiVersions": Object {},
        "clientSideMonitoring": false,
        "computeChecksums": true,
        "convertResponseTypes": true,
        "correctClockSkew": false,
        "credentialProvider": CredentialProviderChain {
          "providers": Array [
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          ],
          "resolveCallbacks": Array [],
        },
        "credentials": null,
        "customUserAgent": null,
        "dynamoDbCrc32": true,
        "endpoint": "cloudformation.ap-southeast-2.amazonaws.com",
        "endpointCacheSize": 1000,
        "endpointDiscoveryEnabled": false,
        "hostPrefixEnabled": true,
        "httpOptions": Object {
          "timeout": 120000,
        },
        "logger": null,
        "maxRedirects": 10,
        "maxRetries": undefined,
        "paramValidation": true,
        "region": "ap-southeast-2",
        "retryDelayOptions": Object {},
        "s3BucketEndpoint": false,
        "s3DisableBodySigning": true,
        "s3ForcePathStyle": false,
        "signatureCache": true,
        "signatureVersion": "v4",
        "sslEnabled": true,
        "systemClockOffset": 0,
        "useAccelerateEndpoint": false,
      },
      "endpoint": Endpoint {
        "host": "cloudformation.ap-southeast-2.amazonaws.com",
        "hostname": "cloudformation.ap-southeast-2.amazonaws.com",
        "href": "https://cloudformation.ap-southeast-2.amazonaws.com/",
        "path": "/",
        "pathname": "/",
        "port": 443,
        "protocol": "https:",
      },
      "isGlobalEndpoint": false,
    },
    "domain": null,
    "dryRun": false,
    "name": "CloudFormation",
    "profile": "test",
    "region": "ap-southeast-2",
    "stacks": Array [],
  },
  CloudFormation {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "cloudFormation": Object {
      "CALL_EVENTS_BUBBLE": [Function],
      "MONITOR_EVENTS_BUBBLE": [Function],
      "_clientId": 5,
      "_events": Object {
        "apiCall": Array [
          [Function],
        ],
        "apiCallAttempt": Array [
          [Function],
        ],
      },
      "config": Config {
        "apiVersion": null,
        "apiVersions": Object {},
        "clientSideMonitoring": false,
        "computeChecksums": true,
        "convertResponseTypes": true,
        "correctClockSkew": false,
        "credentialProvider": CredentialProviderChain {
          "providers": Array [
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          ],
          "resolveCallbacks": Array [],
        },
        "credentials": null,
        "customUserAgent": null,
        "dynamoDbCrc32": true,
        "endpoint": "cloudformation.eu-west-1.amazonaws.com",
        "endpointCacheSize": 1000,
        "endpointDiscoveryEnabled": false,
        "hostPrefixEnabled": true,
        "httpOptions": Object {
          "timeout": 120000,
        },
        "logger": null,
        "maxRedirects": 10,
        "maxRetries": undefined,
        "paramValidation": true,
        "region": "eu-west-1",
        "retryDelayOptions": Object {},
        "s3BucketEndpoint": false,
        "s3DisableBodySigning": true,
        "s3ForcePathStyle": false,
        "signatureCache": true,
        "signatureVersion": "v4",
        "sslEnabled": true,
        "systemClockOffset": 0,
        "useAccelerateEndpoint": false,
      },
      "endpoint": Endpoint {
        "host": "cloudformation.eu-west-1.amazonaws.com",
        "hostname": "cloudformation.eu-west-1.amazonaws.com",
        "href": "https://cloudformation.eu-west-1.amazonaws.com/",
        "path": "/",
        "pathname": "/",
        "port": 443,
        "protocol": "https:",
      },
      "isGlobalEndpoint": false,
    },
    "domain": null,
    "dryRun": false,
    "name": "CloudFormation",
    "profile": "test",
    "region": "eu-west-1",
    "stacks": Array [],
  },
]
`;
